# Expression

./: .gitignore  Cargo.toml  LICENSE  README.md  config.conf  config.toml  expression.sh  run  thought_process.md
backends/: feh.sh  main.sh  swww.sh
core/: engine.sh
src/: config.rs  lib.rs  main.rs
src/backends/: feh.rs  mod.rs  swww.rs
src/core/: wallpaper.rs
src/utils/: calc.rs  cmd.rs  logger.rs  mod.rs  wallpaper.rs
tests/: backend_tests.rs  calc_tests.rs  utils.rs  wallpaper_selection_tests.rs  wallpaper_structure_tests.rs  wallpaper_tests.rs
utils/: logger.sh  time.sh
